# meta-compskin

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE_DIAGRAMS.md  README.md  implementation-logs.md  master-prompt.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  docs.yml
docs/: conf.py  index.rst  installation.rst  quickstart.rst
docs/api/: animation_generator.rst  index.rst  maya_loader.rst  model_data.rst  model_fit.rst
docs/diagrams/: MAYA_DATA_FLOW.md  MAYA_ERROR_HANDLING.md  MAYA_LOADER_REFACTORING.md  MAYA_LOADING_ARCHITECTURE.md
docs/guides/: index.rst
examples/: example_usage.py
paper/: compressed_skinning_for_facial_blendshapes.md  compskin_paper.py
scripts/: build_docs.py
src/metacompskin/: animation_generator.py  constants.py  maya_loader.py  model_data.py  model_fit.py  proteus_high.py  utils.py
src/metacompskin/rig/: riglogic.py
tests/: test_default_output.py
tests/test_data/: expected_aura.npz  expected_aura_600_iter.npz
